--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://simoneyliu.github.io/Kanban-Board",
   "name": "kanban-board-react",
   "version": "0.1.0",
   "private": true,
@@ -10,19 +11,23 @@
     "h8k-design": "^1.0.16",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "save": "^2.3.1"
   },
   "scripts": {
     "prestart": "npm install",
     "pretest": "npm install",
+    "build": "react-scripts build",
     "start": "cross-env HOST=0.0.0.0 PORT=8000 ./node_modules/.bin/react-scripts start",
-    "test": "cross-env CI=true ./node_modules/.bin/react-scripts test --verbose --env=jsdom --testResultsProcessor ./node_modules/jest-junit"
+    "test": "cross-env CI=true ./node_modules/.bin/react-scripts test --verbose --env=jsdom --testResultsProcessor ./node_modules/jest-junit",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "cross-env": "^7.0.2",
     "expect": "^26.1.0",
+    "gh-pages": "^3.1.0",
     "jest-junit": "^11.1.0",
     "react-test-renderer": "^16.13.1"
   },
